tests/regression/baselines/test31_type_escape.expected
ERROR
SyntaxError: Unexpected token )
Note: expected tokens: ["(", "`", "type", "{", r#"[A-Za-z_]\\w*"#]
Parse error occurred here:
    value = x;
    // Try to return a function that references the type variable
    get = fun () -> x;
               ^       
    // The container should have existential type, not expose t
};
